--- a/finalproject/styles/small.css
+++ b/finalproject/styles/small.css
@@ -276,6 +276,10 @@ footer a:hover {
 }
 
 /* ========== CHARACTER CARD ========== */
+.character-card {
+    align-items: center;
+}
+
 .character-card img {
     width: 100px;
     height: 100px;
@@ -283,6 +287,7 @@ footer a:hover {
     margin-bottom: 0.5em;
     border: 2px solid var(--accent-color);
 }
+
 
 .character-card h4 {
     font-size: 0.9em;
