--- a/finalproject/styles/common.css
+++ b/finalproject/styles/common.css
@@ -1,7 +1,7 @@
 
 :root {
     --primary-color: #2C3E50;
-    --accent-color: #81251a;
+    --accent-color: #bc3a2a;
     --neutral-light: #ECF0F1;
     --text-color: #34495E;
     --white: #FFFFFF;
